crates/rig-derive/tests/ui/tool_context/fail_context_in_params.stderr
error: `ToolContext` is host-only and cannot be listed in `params(...)` or `required(...)`
  --> tests/ui/tool_context/fail_context_in_params.rs:7:1
   |
 7 | / fn context_in_params(
 8 | |     #[rig(context)]
 9 | |     context: &mut ToolContext,
10 | |     query: String,
11 | | ) -> Result<String, rig_core::tool::ToolExecutionError> {
   | |_______________________________________________________^
